Fixed up some new updates to work log

--- a/posts/machine-learning-roadmap.mdx
+++ b/posts/machine-learning-roadmap.mdx
@@ -16,11 +16,17 @@ Looking to break into ML and I kind of lose track of what I've been doing so I f
 
 ## The Progress
 
+### August 
+
+- Finished tidying up a [repo](https://github.com/ivanleomk/Zero-To-Hero-notes) with notes that I'd taken down on Karpathy's course. Currently we have part 1,2 and 3 in there.
+- Read up a bit on the paper that he mentioned - [A Neural Probablistic Model](https://www.jmlr.org/papers/volume3/bengio03a/bengio03a.pdf) which mentions the use of a real-number vector to represent words. This is currently used extensively in NLP and is known as word embeddings but back then I'm sure it must have been a novel idea. 
+- Signed up for Buildspace to build a new Generative AI idea - Updates coming soon!
+
 ### July 
 
 I wasn't able to do as much as I wanted due to reservice commitments but I did manage to get a few things done.
 
-- Discovered Andrej Karpathy's [Zero to Hero course](https://karpathy.ai/zero-to-hero.html) and plan to start working through it through August. So far I've finished up with his intro to neural networks and I built a basic binary classifier which has ~42% accuracy using a custom neural network I coded in vanila python ( [Link](blog/notes_on_zero_to_hero) )
+- Discovered Andrej Karpathy's [Zero to Hero course](https://karpathy.ai/zero-to-hero.html) and plan to start working through it through August. So far I've finished up with his intro to neural networks and I built a basic binary classifier which has ~42% accuracy using a custom neural network I coded in vanila python. Finished up with the first 2 chapters of his course and I'm really enjoying it so far.
 
 - Finally figured out how to deploy [langchain on AWS lambda](blog/ci_cd_with_langchain_aws_lambda_using_docker_image) and spent my entire weekend trying to automate a 20 min task with aws sdk 
 
