Fixed up a new article

--- a/posts/configuring-next-auth-with-nextjs.mdx
+++ b/posts/configuring-next-auth-with-nextjs.mdx
@@ -15,8 +15,7 @@ description:
 
 
 <Callout>
-
-Here is the [code](https://github.com/ivanleomk/next-auth-sample-next-13) and a [working deployment](https://next-auth-sample-next-13.vercel.app/) that you can play around with
+The original [code](https://github.com/ivanleomk/next-auth-sample-next-13) is here but I've made a few changes to my latest setup to use Kysely and Resend instead which you can check out over [here](/blog/implementing_magic_links_with_resend_kysely_and_next_auth)
 </Callout>
 
 
