--- a/posts/machine-learning-roadmap.mdx
+++ b/posts/machine-learning-roadmap.mdx
@@ -20,7 +20,10 @@ Looking to break into ML and I kind of lose track of what I've been doing so I f
 
 - Finished tidying up a [repo](https://github.com/ivanleomk/Zero-To-Hero-notes) with notes that I'd taken down on Karpathy's course. Currently we have part 1,2 and 3 in there.
 - Read up a bit on the paper that he mentioned - [A Neural Probablistic Model](https://www.jmlr.org/papers/volume3/bengio03a/bengio03a.pdf) which mentions the use of a real-number vector to represent words. This is currently used extensively in NLP and is known as word embeddings but back then I'm sure it must have been a novel idea. 
-- Signed up for Buildspace to build a new Generative AI idea - Updates coming soon!
+- Signed up for Buildspace to build a small tool to help people prep for interviews using GPT-4 and some other models.
+- Played around with the new Next Auth Kysely integration and Resend and wrote a quick article [here](blog/implementing_magic_links_with_resend_kysely_and_next_auth)
+
+Goal for the remainder of the month is to experiment with GPT-4 and to build some POCs with embeddings and whisper :)
 
 ### July 
 
