--- a/posts/uploading-files-to-r2-in-nextjs.mdx
+++ b/posts/uploading-files-to-r2-in-nextjs.mdx
@@ -1,10 +1,10 @@
 ---
-title: Uploading files in NextJS to R2 
+title: Uploading files in NextJS to R2 with Server Actions
 date: 2023-08-15
 categories:
   - FastAI
   - Machine Learning
-description: How to upload a files to R2 when working with Next13's new app directory.
+description: Configure File Uploads to R2 from NextJS's new App directory using Server Actions
 ---
 
 ## Introduction 
