--- a/posts/uploading-files-to-r2-in-nextjs.mdx
+++ b/posts/uploading-files-to-r2-in-nextjs.mdx
@@ -9,6 +9,10 @@ description: Configure File Uploads to R2 from NextJS's new App directory using 
 
 ## Introduction 
 
+<Callout>
+Code is avaliable [here](https://github.com/ivanleomk/next-r2-file-upload) if you'd like to see the final product :)
+</Callout>
+
 A while back, I experimented a bit with R2 to try and figure out how I could use cloudflare workers to configure uploads to R2. I was able to get it working but it took quite a fair bit of effort. I was also not able to get it working with NextJS's new app directory and had to resort to using S3 and a nextjs package [next-s3-upload](https://next-s3-upload.codingvalue.com/). 
 
 Recently, i started working on implementing file uploads again in a new project ( [Prep with AI](http://www.prepwithai.com) ) and I was able to get it working with R2 and NextJS's new app directory. I thought I would share the steps I took to get it working.
