Fixed up the renaming

--- a/posts/building-a-local-chatgpt-clone-from-scratch.mdx
+++ b/posts/building-a-local-chatgpt-clone-from-scratch.mdx
@@ -10,7 +10,7 @@ description: I've been toying with this idea for a while and I think I have some
 
 > Code is avaliable [here](https://github.com/ivanleomk/gpt-local-clone)
 
-If you're new to the blog, I'm a full stack software engineer looking to break into the machine learning and data space. I don't really have much experience so I'm documenting my journey along the way to make it easier for others to follow along and learn from my mistakes. I figure it'll be nice to have a record of my progress as well.
+If you're new to the blog, I'm a full stack software engineer interested in the machine learning and data space. I don't really have much experience so I'm documenting my journey along the way to make it easier for others to follow along and learn from my mistakes. I figure it'll be nice to have a record of my progress as well.
 
 Recently, someone linked me to a fantastic video by David Shapiro where he built his own version of Chat GPT locally. I thought that it was a pretty cool project and had some initial ideas on how to improve upon his design so I thought I would work on implementing it in parts. 
 
