Modified the gandalf with live links

--- a/posts/reinventing-gandalf.mdx
+++ b/posts/reinventing-gandalf.mdx
@@ -9,6 +9,8 @@ description: How to simulate a red-team attack on your own models to improve the
 
 ## Introduction
 
+> The code for the challenge can be found [here](https://github.com/ivanleomk/The-Chinese-Wall) and a [live deployment](https://thechinesewall-3d869f30da82.herokuapp.com/experimentation) for the time being. I've also uploaded the code for the [discord bot](https://github.com/ivanleomk/chinese-wall-discord-bot/) if you're keen to see how we implemented it.
+
 A while ago, a company called Lakera released a challenge called [Gandalf on Hacker News](https://news.ycombinator.com/item?id=35905876) which took the LLM community by storm. The premise was simple - get a LLM that they had built to reveal a password. This wasn't an easy task and many people spent days trying to crack it. 
 
 Some time after their challenge had been relased, they were then kind enough to release both the solution AND a rough overview of how the challenge was developed. You can check it out [here](https://www.lakera.ai/insights/who-is-gandalf). Inspired by this, I figured I'd try to reproduce it to some degree on my own in a challenge I called The Chinese Wall with [Peter Mekhaeil
